ajout d'images + tentative media queeries mobile

--- a/Dates.html
+++ b/Dates.html
@@ -20,6 +20,7 @@
         <section id="a_venir">
             <h4>A venir</h4>
             <p>En cours de création...<br /><br /></p>
+            <img src="./images_corapo/petit_logo_corapo_vert.jpg" alt="petit logo de la corapo" id="petit_logo_dates" />
         </section>
 
         <section id="passees">
