--- a/Presse.html
+++ b/Presse.html
@@ -20,17 +20,17 @@
         <section>
             <p>
             Tout par de-là, au 361°<br />
-            <img src="./images_corapo/361.png" alt="presse_361" id="presse_361" /><br /><br />
+            <img src="./images_corapo/361.png" alt="coupure de presse pour la représentation au 361" id="presse_361" /><br /><br />
             </p>
 
             <p>
             Autre(s) Monde(s), au Festeenval <br />
-            <img src="./images_corapo/festeenval.jpg" alt="presse_festeenval" id="presse_festeenval" /><br /><br />
+            <img src="./images_corapo/festeenval.jpg" alt="coupure de presse pour la représentation lors du festeenval" id="presse_festeenval" /><br /><br />
             </p>
 
             <p>
             Autre(s) Monde(s), au 3C <br />
-            <a href="https://by-night.fr/aix-en-provence/soiree/autres-mondes-1--289066" id="presse_3C">par le By-night</a> <br /><br />
+            <a href="https://by-night.fr/aix-en-provence/soiree/autres-mondes-1--289066" id="presse_3C" target="_blank">par le By-night</a> <br /><br />
             </p>
         </section>
     </main>
