--- a/APropos.html
+++ b/APropos.html
@@ -81,7 +81,9 @@
     </main>
 
     <footer>
-      <p class="copyright">© Corapocie. Tous droits réservés.</p>
+      <p class="copyright">
+        © Tous droits réservés. Corapocie par <a href="https://github.com/NaelJL" target="_blank" class="credit">Nael JL</a>.
+      </p>
     </footer>
   </body>
   <script src="./CorapoVS.js"></script>
